# llama-test

./: .envrc  .gitignore  COST.md  devbox.json  docker-compose.yml  inspect_milvus.py  pyproject.toml  requirements.txt  starter.py
data/: standup.txt  text_2.txt
storage/: docstore.json  index_store.json
